# reevo

./: .gitignore  LICENSE  README.md  ga.py  index.html  main.py  pyproject.toml  reevo.py  requirements.txt
baselines/ael/: ga.py
baselines/eoh/: __init__.py  eoh_adapter.py  problem_adapter.py  readme.md
cfg/: config.yaml
cfg/llm_client/: azure.yaml  bailian.yaml  deepseek.yaml  litellm.yaml  llama_api.yaml  llamaapi.yaml  moonshot.yaml  openai.yaml  siliconflow.yaml  zhipuai.yaml
cfg/problem/: bpp_offline.yaml  bpp_offline_aco.yaml  bpp_offline_aco_black_box.yaml  bpp_online.yaml  cvrp_aco.yaml  cvrp_aco_black_box.yaml  cvrp_lehd.yaml  cvrp_pomo.yaml  dpp_ga.yaml  mkp_aco.yaml  mkp_aco_black_box.yaml  op_aco.yaml  op_aco_black_box.yaml  tsp_aco.yaml  tsp_aco_black_box.yaml  tsp_constructive.yaml  tsp_gls.yaml  tsp_lehd.yaml  tsp_pomo.yaml
docs/: build.py  config.toml  publish.sh
docs/static/: index.css
docs/template/: index.html
outputs/cvrp_aco_gpt-3.5-turbo/: best_code_overall_stdout.txt  best_code_overall_stdout2.txt  problem_iter0_response0.txt  problem_iter0_response1.txt  problem_iter0_response2.txt  problem_iter0_response3.txt  problem_iter0_response4.txt  problem_iter0_response5.txt  problem_iter0_response6.txt  problem_iter0_response7.txt  problem_iter0_response8.txt  problem_iter0_response9.txt  problem_iter0_stdout0.txt  problem_iter0_stdout3.txt  problem_iter0_stdout4.txt  problem_iter0_stdout5.txt  problem_iter0_stdout7.txt  problem_iter1_response0.txt  problem_iter1_response1.txt  problem_iter1_response2.txt  problem_iter1_response3.txt  problem_iter1_response4.txt  problem_iter1_response5.txt  problem_iter1_response6.txt  problem_iter1_response7.txt  problem_iter1_response8.txt  problem_iter1_response9.txt  problem_iter1_stdout0.txt  problem_iter1_stdout1.txt  problem_iter1_stdout2.txt  problem_iter1_stdout3.txt  problem_iter1_stdout4.txt  problem_iter1_stdout5.txt  problem_iter1_stdout6.txt  problem_iter1_stdout7.txt  problem_iter1_stdout8.txt  (+161 more)
problems/: readme.md
static/: index.css
utils/: paraphrase.py  utils.py
(+847 files in other folders)
